--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,33 +6,20 @@ services:
     volumes:
       - db_redis_data:/var/lib/redis
 
-  db:
+  db_test:
     image: mysql:8.0
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: app
+      MYSQL_ROOT_PASSWORD: mysql
+      MYSQL_DATABASE: app_test
       MYSQL_USER: mysql
       MYSQL_PASSWORD: mysql
     ports:
-      - 3306:3306
+      - 3307:3306
+    tmpfs:
+      - /var/lib/mysql
     volumes:
-      - db_data:/var/lib/mysql
-
-  # db_test:
-  #   image: mysql:8.0
-  #   restart: always
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: mysql
-  #     MYSQL_DATABASE: app_test
-  #     MYSQL_USER: mysql
-  #     MYSQL_PASSWORD: mysql
-  #   ports:
-  #     - 3307:3306
-  #   tmpfs:
-  #     - /var/lib/mysql
-  #   volumes:
-  #     - ./docker/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./docker/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
 
 volumes:
   db_data:
