--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "npm run prisma:db:push && nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "npm run prisma:db:push && npm run build && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prisma:migrate:test": "prisma migrate deploy",
     "test": "npm run prisma:migrate:test && jest --coverage",
